Add to 'scripted' memory limits.