@@ -53,4 +53,6 @@ libraryDependencies ++= {
 
 scriptedBufferLog := false
 
+scriptedLaunchOpts := Seq("-Xms512m", "-Xmx512m", "-XX:MaxPermSize=256m")
+
 //logLevel := Level.Debug
